--- a/composer.json
+++ b/composer.json
@@ -5,39 +5,25 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-<<<<<<< Updated upstream
-        "php": "^8.2",
-        "laravel/framework": "^12.0",
-        "laravel/tinker": "dev-develop"
-    },
-    "require-dev": {
-        "fakerphp/faker": "^1.23",
-        "laravel/pint": "^1.13",
-        "laravel/sail": "dev-develop",
-        "mockery/mockery": "^1.6",
-        "phpunit/phpunit": "^10.5"
-=======
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
-        "inertiajs/inertia-laravel": "^1.0",
-        "laravel/framework": "^10.0",
+        "inertiajs/inertia-laravel": "^0.6.8",
+        "laravel/breeze": "^1.23",
+        "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.8",
-        "spatie/laravel-sluggable": "^3.6",
-        "stripe/stripe-php": "^14.1",
-        "tightenco/ziggy": "^2.0"
+        "spatie/laravel-sluggable": "^3.5",
+        "stripe/stripe-php": "^12.3",
+        "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
-        "laravel/breeze": "^1.29",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.0",
+        "phpunit/phpunit": "^10.1",
         "spatie/laravel-ignition": "^2.0"
->>>>>>> Stashed changes
     },
     "autoload": {
         "psr-4": {
@@ -63,15 +49,10 @@
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "@php artisan key:generate --ansi",
-            "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
-            "@php artisan migrate --graceful --ansi"
+            "@php artisan key:generate --ansi"
         ]
     },
     "extra": {
-        "branch-alias": {
-            "dev-master": "12.x-dev"
-        },
         "laravel": {
             "dont-discover": []
         }
@@ -85,6 +66,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
