--- a/package.json
+++ b/package.json
@@ -6,42 +6,31 @@
         "build": "vite build"
     },
     "devDependencies": {
-<<<<<<< Updated upstream
-        "axios": "^1.6.4",
-        "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0"
-=======
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
-        "@types/ziggy-js": "^1.3.2",
         "@vitejs/plugin-vue": "^4.0.0",
-        "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.19",
+        "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.8",
-        "postcss": "^8.4.38",
-        "sass": "^1.72.0",
-        "tailwindcss": "^3.4.1",
-        "typescript": "^5.0.2",
-        "unplugin-vue-components": "^0.26.0",
-        "vite": "^4.5.2",
-        "vue": "^3.2.41",
-        "vue-tsc": "^1.2.0"
+        "laravel-vite-plugin": "^0.8.0",
+        "postcss": "^8.4.18",
+        "sass": "^1.75.0",
+        "tailwindcss": "^3.2.1",
+        "vite": "^4.0.0",
+        "vue": "^3.2.41"
     },
     "dependencies": {
-        "@headlessui/vue": "^1.7.19",
-        "@heroicons/vue": "^2.1.3",
-        "dayjs": "^1.11.10",
-        "element-plus": "^2.6.3",
-        "filepond": "^4.30.6",
-        "filepond-plugin-file-validate-type": "^1.2.9",
-        "filepond-plugin-image-preview": "^4.6.12",
-        "flowbite": "^2.3.0",
+        "@headlessui/vue": "^1.7.16",
+        "@heroicons/vue": "^2.0.18",
+        "@vue-hero-icons/outline": "^1.7.2",
+        "@vue-hero-icons/solid": "^1.7.2",
+        "chart.js": "^4.4.2",
+        "dayjs": "^1.11.11",
+        "element-plus": "^2.3.12",
+        "flowbite": "^1.8.1",
         "primeflex": "^3.3.1",
         "primeicons": "^7.0.0",
-        "primevue": "^3.50.0",
-        "vue-filepond": "^7.0.4",
+        "primevue": "^3.51.0",
+        "sweetalert2": "^11.7.27",
         "vue-sweetalert2": "^5.0.5"
->>>>>>> Stashed changes
     }
 }
