--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "mservice/payment": "dev-master",
+        "ommani/payment-vnpay": "dev-master",
+        "php-http/guzzle7-adapter": "^1.0",
         "spatie/laravel-sluggable": "^3.5",
         "stripe/stripe-php": "^12.3",
         "tightenco/ziggy": "^1.0"
@@ -22,7 +25,7 @@
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.1",
+        "phpunit/phpunit": "^10.3",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
