--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "start": "vite preview --port $PORT"
+        "start": "vite preview --port $PORT --host 0.0.0.0"
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
