--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
         "sweetalert2": "^11.7.27",
         "vue-sweetalert2": "^5.0.5",
         "vuejs-paginate-next": "^1.0.2"
+    },
+    "engines": {
+        "node": "18.x"
     }
 }
