--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /.phpunit.cache
 /node_modules
-# /public/build
+/public/build
 /public/hot
 /public/storage
 /storage/*.key
@@ -17,5 +17,7 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+
+.vercel
 
 .vercel
