--- a/vercel.json
+++ b/vercel.json
@@ -8,9 +8,13 @@
     },
     "routes": [
         {
+            "src": "/build/(.*)",
+            "dest": "/build/$1"
+          },
+          {
             "src": "/(.*)",
             "dest": "/api/index.php"
-        }
+          }
     ],
     "env": {
         "APP_ENV": "production",
